Button now overlaps email input and is correct gradient

--- a/base-apparel-styles.css
+++ b/base-apparel-styles.css
@@ -13,6 +13,18 @@
     color: hsl(228, 45%, 44%);
 }
 
+.child {
+    position: absolute;
+}
+
+.form-control:focus {
+    border-color: hsl(0, 36%, 70%);
+}
+
+.form-control::selection {
+    border-color:
+}
+
 #image-col {
     padding-right: 0px;
 }
@@ -40,6 +52,9 @@
 
 #email-address-input {
     border-radius: 2rem;
+    border-width: thin;
+    border-color: hsl(0, 36%, 70%) !important;
+    background-color: transparent !important;
 }
 
 #hero-desktop {
@@ -51,7 +66,20 @@
     padding-left: 150px;
 }
 
+#submit {
+    border-radius: 2rem;
+    font-size: 20px;
+    background-image: linear-gradient(to right, #f8b4b5, #f19393);
+    border-color: hsl(0, 36%, 70%);
+    color: white;
+    right: 0px;
+}
+
 #we {
     font-weight: 200;
+    color: hsl(0, 36%, 70%);
+}
+
+::placeholder {
     color: hsl(0, 36%, 70%);
 }
